[gd_scene load_steps=5 format=3 uid="uid://cwj7stnnffpig"]

[ext_resource type="Theme" uid="uid://0fva8xxptln6" path="res://common/main_theme.tres" id="1_fp1a8"]
[ext_resource type="Script" path="res://tree_viewer_gui/tree_viewer_gui.gd" id="2_ilj1p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pwx7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0p4n3"]

[node name="TreeViewerGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_fp1a8")
script = ExtResource("2_ilj1p")

[node name="EditLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 32.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.827005, 0.639271, 0.432098, 1)
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Edit Mode!
[color=gold][A][/color]dd  [color=gold][D][/color]elete  [color=gold][C][/color]hild[/center]"
fit_content = true
autowrap_mode = 0

[node name="TreeName" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 32.0
offset_top = 32.0
theme_override_colors/font_color = Color(0.827005, 0.639271, 0.432098, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_pwx7f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0p4n3")
text = "Tree Name"
expand_to_text_length = true

[node name="BackBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 32.0
offset_right = -32.0
grow_horizontal = 0
text = "Back"

[node name="EditBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "Edit"

[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="EditBtn" to="." method="_on_edit_btn_pressed"]
